src/styles/base.scss
* {
  box-sizing: border-box;
  font-family: Poppins;
  font-weight: normal;
  margin: 0;
}

html,
body {
  height: 100%;
  margin: 0;
}

body {
  background: #000000;
}

.flex-div {
  height: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.flex-child {
  position: relative;
  flex: 1;
}

@media screen and(max-width: 500px) {
  .flex-div {
    flex-direction: column;
  }
}

